--- a/film_tlo/css/style.css
+++ b/film_tlo/css/style.css
@@ -1,10 +1,13 @@
 #video-wrapper video {
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 #video-wrapper {
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
 }
 
 body {
