--- a/stopka_strony/css/style.css
+++ b/stopka_strony/css/style.css
@@ -1,5 +1,13 @@
 div {
     width: 100%;
-    height: 100vh;
+    height: 5000px;
     background: linear-gradient(to bottom, yellow, red, blue);
+}
+
+.footer {
+    position: fixed;
+    height: 10%;
+    background-color: aqua;
+    bottom: 0;
+    width: 100%;
 }
