--- a/animcja_kwadraty_po_kwadracie/css/style.css
+++ b/animcja_kwadraty_po_kwadracie/css/style.css
@@ -1,16 +1,15 @@
 .container {
-    position: relative;
-    width: 200px;
-    height: 200px;
+    width: 100%;
+    height: 100vh;
     background-color: rgba(127, 255, 212, 0.58);
 }
 
 .trasa {
-    position: absolute;
+    position: relative;
     width: 100px;
     height: 100px;
-    top: 50px;
-    left: 50px;
+    top: 50%;
+    left: 50%;
     background-color: rgba(0, 0, 255, 0.43);
 }
 
@@ -22,20 +21,20 @@
 }
 
 .prawy {
-    top: 50px;
-    right: 50px;
+    top: 0px;
+    right: 0px;
 }
 
 .lewy {
-    bottom: 50px;
-    left: 50px;
+    bottom: 0px;
+    left: 0px;
 }
 
-.container:hover > .maly.lewy {
+.trasa:hover > .maly.lewy {
     animation: obrot_lewy 5s infinite;
 }
 
-.container:hover > .maly.prawy {
+.trasa:hover > .maly.prawy {
     animation: obrot_prawy 5s infinite;
 }
 
